--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,38 @@
-.main {
-  max-width: 1280px;
+html {
+  font-size: 14px;
+  line-height: 18px;
+  font-family: "Open Sans", Arial, sans-serif;
+  color: #333;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  height: 100%;
+}
+
+h1 {
+  font-family: "Ubuntu Condensed", Arial, sans-serif;
+  font-size: 38px;
+  font-weight: normal;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Ubuntu Condensed", Arial, sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+}
+
+main {
+  max-width: 1160px;
   margin: 0 auto;
+}
+
+.top-img {
+  box-sizing: border-box;
+  width: 100%;
+  height: 150px;
+  opacity: 0.7;
 }
