--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,15 +6,25 @@
   color: white;
   display: flex;
   justify-content: space-between;
-  flex: 0 0 auto;
+}
+
+.footer__item {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer__item_big {
+  font-weight: bold;
+  font-size: 18px;
+  align-items: center;
 }
 
 .footer__title {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 28px;
   text-transform: uppercase;
-  margin: auto 0;
-  padding: 10px;
+  margin: 0 0 30px 0;
 }
 
 .footer p {
