--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,24 +1,42 @@
 .navbar {
+  padding: 20px 0;
   box-sizing: border-box;
   width: 100%;
   background: #808080;
   color: white;
-  border-radius: 10px 10px 0 0;
-}
-
-.navbar__top {
-  padding: 10px 10px 0 10px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  font-size: 20px;
+  font-family: "Ubuntu Condensed", Arial, sans-serif;
 }
 
-.navbar__bottom {
-  margin-top: 10px;
+.navbar__item {
+  padding: 0 20px;
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
+  flex-direction: column;
+  justify-content: center;
 }
+
+.navbar__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.navbar__button {
+  width: 180px;
+  padding: 5px;
+  margin: 3px;
+  font-size: 17px;
+  background: #292929;
+  font-family: "Ubuntu Condensed", Arial, sans-serif;
+  color: white;
+  cursor: pointer;
+}
+
+.navbar__button:hover {
+  opacity: 0.7;
+}
+
 
 
 
