--- a/src/components/Navbar/__link/NavbarLink.css
+++ b/src/components/Navbar/__link/NavbarLink.css
@@ -1,10 +1,21 @@
 .navbar__link {
-  width: 100%;
-  text-transform: uppercase;
+  padding: 10px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  color: white;
+  text-align: center;
+}
+
+.navbar__link:hover {
+  opacity: 0.8;
 }
 
 .navbar__link:hover,
 .navbar__link_active {
-  background: gold;
-  color: #333;
+  color: gold;
+}
+
+.navbar__link_uppercase {
+  text-transform: uppercase;
 }
