--- a/src/pages/SamplesPage/index.css
+++ b/src/pages/SamplesPage/index.css
@@ -3,10 +3,11 @@
 }
 
 .samples__img {
-  border: 1px solid #AAA;
+  border: 2px solid #AAA;
   margin: 10px;
   width: 300px;
   height: 200px;
+  box-shadow: 15px 10px 10px #DDD;
 }
 
 .samples__images {
@@ -14,4 +15,18 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.samples__titles {
+  display: flex;
+  justify-content: center;
+}
+
+.samples__title {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.samples__title:hover {
+  opacity: 0.5;
 }
