--- a/src/pages/ContactsPage/index.css
+++ b/src/pages/ContactsPage/index.css
@@ -1,3 +1,10 @@
 .contact-img {
   background: center/cover no-repeat url('../../images/main-bg.jpg') ;
 }
+
+.ymap {
+  width: 100%;
+  margin: 30px 0;
+  border: 2px solid #AAA;
+  box-shadow: 5px 5px 25px #DDD;
+}
