--- a/src/components/Form-order/FormOrder.css
+++ b/src/components/Form-order/FormOrder.css
@@ -1,4 +1,8 @@
-
+.form-order-wrapper {
+  width: 100%;
+  margin: 30px;
+  border: 10px solid #808080;
+}
 
 .form-order {
   max-width: 550px;
@@ -8,7 +12,6 @@
   flex-direction: column;
   align-items: center;
   font-family: "Ubuntu Condensed", Arial, sans-serif;
-  border: 5px solid #BBB;
 }
 
 .form-order__description {
