--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -9,7 +9,7 @@
 }
 
 .slider_active {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   margin-top: -270px;
@@ -23,12 +23,10 @@
 .slider__btn {
   width: 32px;
   height: 32px;
-  padding: 5px;
-  border-radius: 10px;
   position: absolute;
-  background: rgba(255, 255, 255, 0.5);
   top: 50%;
-  margin-top: -21px;
+  color: gold;
+  margin-top: -16px;
   font-size: 28px;
   line-height: 32px;
   text-align: center;
