--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -42,7 +42,12 @@
   text-decoration: none;
   color: #333;
   font-size: 20px;
+  font-weight: bold;
   background: #ffcc00;
+}
+
+.home-img__button:hover {
+  background: #ffe064;
 }
 
 .home__title {
@@ -66,6 +71,10 @@
   display: inline-block;
   width: 50%;
   padding: 0 20px;
+}
+
+.home__section p {
+  text-align: justify;
 }
 
 .home__ul {
