--- a/src/components/Form-order/FormOrder.css
+++ b/src/components/Form-order/FormOrder.css
@@ -1,6 +1,7 @@
 .form-order-wrapper {
+  box-sizing: border-box;
   width: 100%;
-  margin: 30px;
+  margin: 30px 0;
   border: 10px solid #808080;
 }
 
