--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,19 @@
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+  line-height: 20px;
   font-family: "Ubuntu Condensed", Arial, sans-serif;
+}
+
+.navbar__burger {
+  padding: 20px;
+  align-items: center;
+  display: none;
+  cursor: pointer;
+}
+
+.navbar__burger:hover {
+  color: gold;
 }
 
 .navbar__item {
@@ -18,12 +30,15 @@
 }
 
 .navbar__list {
-  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
   flex-wrap: wrap;
 }
 
 .navbar__button {
-  width: 180px;
+  width: 150px;
   padding: 5px;
   margin: 3px;
   font-size: 17px;
@@ -37,6 +52,39 @@
   opacity: 0.7;
 }
 
+@media (max-width: 1100px) {
+  .navbar__contacts {
+    display: none;
+  }
+}
+
+@media (max-width: 850px) {
+  .navbar__list {
+    position: absolute;
+    top: 122px;
+    left: 0;
+    flex-direction: column;
+    max-width: 320px;
+    padding: 0;
+    background: #808080;
+    z-index: 10;
+    display: none;
+  }
+
+  .navbar__list_visible {
+    display: flex;
+  }
+
+  .navbar__list .navbar__link {
+    box-sizing: border-box;
+    width: 100%;
+    text-align: start;
+  }
+
+  .navbar__burger {
+    display: flex;
+  }
+}
 
 
 
