--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -57,6 +57,7 @@
 .home__wrapper-steps-img {
   display: flex;
   justify-content: center;
+  padding: 0 20px;
 }
 
 .home__steps-img {
@@ -64,6 +65,11 @@
   height: auto;
   width: 100%;
   max-width: 800px;
+}
+
+.home__sections {
+  display: flex;
+  flex-direction: row;
 }
 
 .home__section {
@@ -83,4 +89,28 @@
   font-family: "Ubuntu Condensed", Arial, sans-serif;
   font-size: 28px;
   line-height: 1.5;
+}
+
+@media (max-width: 830px) {
+  .home-img {
+    font-size: 20px;
+  }
+  .home-img__content-left {
+    padding-right: 0;
+  }
+  .home__sections {
+    flex-direction: column;
+  }
+  .home__section {
+    width: 100%;
+  }
+}
+
+@media (max-width: 520px) {
+  .home__ul {
+    font-size: 20px;
+  }
+  .home__description {
+    font-size: 16px;
+  }
 }
