--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@ li {
 
 article {
   padding: 0 20px;
-  flex: 1 1 2;
 }
 
 aside {
@@ -57,7 +56,12 @@ aside {
   flex: 0 0 366px;
 }
 
-aside .main-idea {
+.wrapper-slider {
+  display: flex;
+  justify-content: center;
+}
+
+.main-idea {
   padding-top: 10px;
   text-align: justify;
   border-top: 3px solid red;
@@ -69,4 +73,16 @@ aside .main-idea {
   width: 100%;
   height: 150px;
   opacity: 0.7;
+}
+
+@media (max-width: 800px) {
+  .content {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 520px) {
+  main {
+    font-size: 16px;
+  }
 }
