--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -20,6 +20,19 @@
   border: 3px solid #AAA;
 }
 
+.slider__modal {
+  z-index: 1000;
+}
+
+.slider__modal_active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(100, 100, 100, 0.5);
+}
+
 .slider__btn {
   width: 32px;
   height: 32px;
@@ -27,7 +40,7 @@
   top: 50%;
   color: gold;
   margin-top: -16px;
-  font-size: 28px;
+  font-size: 32px;
   line-height: 32px;
   text-align: center;
   cursor: pointer;
@@ -47,6 +60,6 @@
 }
 
 .slider__btn_close {
-  top: 5%;
-  left: 90%;
+  top: -30px;
+  right: 15px;
 }
