--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   width: 100%;
   background: center/cover no-repeat url('../../images/main-bg.jpg');
-  height: 580px;
   color: white;
   font-size: 28px;
   line-height: 1.5;
@@ -22,8 +21,8 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
-  padding: 60px 20px;
   display: flex;
+  justify-content: space-between;
 }
 
 .home-img__content p {
@@ -32,7 +31,17 @@
 
 .home-img__content-left {
   max-width: 460px;
-  padding-right: 100px;
+  padding: 60px 60px 60px 20px;
+}
+
+.home-img__road-images {
+  width: 300px;
+  flex: 1 0 auto;
+}
+
+.home-img__road-images_horiz {
+  min-height: 200px;
+  display: none;
 }
 
 .home-img__button {
@@ -91,18 +100,42 @@
   line-height: 1.5;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 1150px) {
+  .home-img__content-left {
+    padding-right: 20px;
+  }
+  .home-img__road-images {
+    width: 200px;
+  }
+  .home-img__road-images_horiz {
+    width: 100%;
+  }
+}
+
+@media (max-width: 840px) {
   .home-img {
     font-size: 20px;
   }
-  .home-img__content-left {
-    padding-right: 0;
+  .home-img__road-images_additional {
+    display: none;
   }
   .home__sections {
     flex-direction: column;
   }
   .home__section {
     width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  .home-img__content {
+    flex-wrap: wrap;
+  }
+  .home-img__road-images {
+    display: none;
+  }
+  .home-img__road-images_horiz {
+    display: block;
   }
 }
 
