--- a/src/components/Form-take-order/FormTakeOrder.css
+++ b/src/components/Form-take-order/FormTakeOrder.css
@@ -1,10 +1,12 @@
 .form-take-order__modal {
+  box-sizing: border-box;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(100, 100, 100, 0.5);
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,6 +43,7 @@
 }
 
 .form-take-order__title {
+  margin-top: 0;
   text-transform: uppercase;
   font-size: 18px;
   font-weight: bold;
@@ -60,7 +63,7 @@
 }
 
 .form-take-order__submit {
-  margin: 20px;
+  margin: 10px;
   padding: 10px 20px;
   border: 0;
   border-radius: 3px;
@@ -75,6 +78,7 @@
 }
 
 .form-take-order__description {
+  margin: 0;
   font-size: 14px;
   text-align: center;
 }
