--- a/src/components/Navbar/__link/NavbarLink.css
+++ b/src/components/Navbar/__link/NavbarLink.css
@@ -3,7 +3,7 @@
   padding: 10px;
   text-decoration: none;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
   color: white;
   text-align: center;
 }
